2009-09-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/INode.cs: Extended abstract node a
	  bit.

2009-09-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/AmbienceService.cs: Filtered
	  'empty' documentation.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects.Dom/INode.cs:
	* MonoDevelop.Projects.Dom/IUsing.cs:
	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/IAttribute.cs:
	* MonoDevelop.Projects.Dom/IDomVisitor.cs:
	* MonoDevelop.Projects.Dom/IBaseMember.cs:
	* MonoDevelop.Projects.Dom/IReturnType.cs:
	* MonoDevelop.Projects.Dom/CopyDomVisitor.cs:
	* MonoDevelop.Projects.Dom.Output/Ambience.cs:
	* MonoDevelop.Projects.Dom/CompilationUnit.cs:
	* MonoDevelop.Projects.Dom/ICompilationUnit.cs:
	* MonoDevelop.Projects.Dom/DomMemberDecorator.cs:
	* MonoDevelop.Projects.Dom.Output/OutputSettings.cs:
	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs:
	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs:
	* MonoDevelop.Projects.CodeGeneration/INameValidator.cs:
	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
	* MonoDevelop.Projects.Dom.MemoryDatabase/MemoryProjectDom.cs:
	  Renamed IDomVisitable -> INode

2009-09-18  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: If default namespace
	  is blank, set it to the project name instead of treating
	  that as the project name. Improves VS compatibility.

2009-09-18  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Remove
	  warning since the null db seems to be valid in some cases.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ExpressionContext.cs: Filter
	  internal "value__" field for enums.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/OutputFlags.cs: